[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plxscripting"
version = "1.0.4"
description = "Python files required to interact with PLAXIS API"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28,<3.0",
    "pycryptodome>=3.11.0,<4.0",
    "psutil>=5.7.2,<6.0",
    "ipykernel>=6.21.2",
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["plxscripting", "PLAXIS", "CEMS"]

[project.urls]
repository = "https://github.com/cemsbv/plxscripting"

[project.optional-dependencies]
test = ["coveralls", "pytest"]